--- a/index.html
+++ b/index.html
@@ -240,6 +240,46 @@
         </div>
     </section>
 
+    <!-- Founders Section -->
+    <section id="founders" class="founders section-padding">
+        <div class="container">
+            <div class="section-header">
+                <h2>Our Founders</h2>
+                <p>The Visionaries Behind Tri-Axis</p>
+            </div>
+            <div class="founders-grid">
+                <div class="founder-card">
+                    <div class="founder-image">
+                        <img src="images/founder1.jpg" alt="Founder 1" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+1'">
+                    </div>
+                    <h3>Anthony Malabanan</h3>
+                    <p>CEO & Co-Founder</p>
+                </div>
+                <div class="founder-card">
+                    <div class="founder-image">
+                        <img src="images/founder2.jpg" alt="Founder 2" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+2'">
+                    </div>
+                    <h3>Gerard Pacete</h3>
+                    <p>CTO & Co-Founder</p>
+                </div>
+                <div class="founder-card">
+                    <div class="founder-image">
+                        <img src="images/founder3.jpg" alt="Founder 3" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+3'">
+                    </div>
+                    <h3>Jason Delos Reyes</h3>
+                    <p>COO & Co-Founder</p>
+                </div>
+                <div class="founder-card">
+                    <div class="founder-image">
+                        <img src="images/founder4.jpg" alt="Founder 4" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+4'">
+                    </div>
+                    <h3>Julio Martinez</h3>
+                    <p>CMO & Co-Founder</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact section-padding">
         <div class="container">
