--- a/index.html
+++ b/index.html
@@ -250,31 +250,31 @@
             <div class="founders-grid">
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="images/founder1.jpg" alt="Founder 1" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+1'">
+                        <img src="images/founder1.jpg" alt="Anthony Malabanan" onerror="this.onerror=null; this.src='https://placehold.co/200x250/2563eb/ffffff?text=Anthony'">
                     </div>
                     <h3>Anthony Malabanan</h3>
-                    <p>CEO & Co-Founder</p>
+                    <p>Co-Founder</p>
                 </div>
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="images/founder2.jpg" alt="Founder 2" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+2'">
+                        <img src="images/founder2.jpg" alt="Gerard Pacete" onerror="this.onerror=null; this.src='https://placehold.co/200x250/1e40af/ffffff?text=Gerard'">
                     </div>
                     <h3>Gerard Pacete</h3>
-                    <p>CTO & Co-Founder</p>
+                    <p>Co-Founder</p>
                 </div>
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="images/founder3.jpg" alt="Founder 3" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+3'">
+                        <img src="images/founder3.jpg" alt="Jason Delos Reyes" onerror="this.onerror=null; this.src='https://placehold.co/200x250/3b82f6/ffffff?text=Jason'">
                     </div>
                     <h3>Jason Delos Reyes</h3>
-                    <p>COO & Co-Founder</p>
+                    <p>Co-Founder</p>
                 </div>
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="images/founder4.jpg" alt="Founder 4" onerror="this.src='https://via.placeholder.com/200x250?text=Founder+4'">
+                        <img src="images/founder4.jpg" alt="Julio Martinez" onerror="this.onerror=null; this.src='https://placehold.co/200x250/1d4ed8/ffffff?text=Julio'">
                     </div>
                     <h3>Julio Martinez</h3>
-                    <p>CMO & Co-Founder</p>
+                    <p>Co-Founder</p>
                 </div>
             </div>
         </div>
