--- a/index.html
+++ b/index.html
@@ -250,21 +250,21 @@
             <div class="founders-grid">
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="images/founder1.jpg" alt="Anthony Malabanan" onerror="this.onerror=null; this.src='https://placehold.co/200x250/2563eb/ffffff?text=Anthony'">
+                        <img src="images/sirM.jpg" alt="Anthony Malabanan" onerror="this.onerror=null; this.src='https://placehold.co/200x250/2563eb/ffffff?text=Anthony'">
                     </div>
                     <h3>Anthony Malabanan</h3>
                     <p>Co-Founder</p>
                 </div>
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="images/founder2.jpg" alt="Gerard Pacete" onerror="this.onerror=null; this.src='https://placehold.co/200x250/1e40af/ffffff?text=Gerard'">
+                        <img src="images/sirGe.jpg" alt="Gerard Pacete" onerror="this.onerror=null; this.src='https://placehold.co/200x250/1e40af/ffffff?text=Gerard'">
                     </div>
                     <h3>Gerard Pacete</h3>
                     <p>Co-Founder</p>
                 </div>
                 <div class="founder-card">
                     <div class="founder-image">
-                        <img src="images/founder3.jpg" alt="Jason Delos Reyes" onerror="this.onerror=null; this.src='https://placehold.co/200x250/3b82f6/ffffff?text=Jason'">
+                        <img src="images/sir json.jpg" alt="Jason Delos Reyes" onerror="this.onerror=null; this.src='https://placehold.co/200x250/3b82f6/ffffff?text=Jason'">
                     </div>
                     <h3>Jason Delos Reyes</h3>
                     <p>Co-Founder</p>
