--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     <a href="#about" class="nav-link">About</a>
                     <a href="#triconnect" class="nav-link">TriConnect</a>
                     <a href="#features" class="nav-link">Features</a>
+                    <a href="#founders" class="nav-link">Founders</a>
                     <a href="#contact" class="nav-link">Contact</a>
+                    <a href="https://triconnect.bccbsis.com/public/index.php/login" class="nav-link">Log In</a>
                 </div>
                 <div class="hamburger" id="hamburger">
                     <span></span>
